# jackknife

./: ISSUE_TEMPLATE.md  README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/libs/: jackknife-1.0.0.aar  jackknife-1.2.2-debug.aar  jackknife-1.4.3-debug.aar  jackknife-1.4.4-debug.aar  jackknife-1.4.6-debug.aar
app/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
jackknife/: CMakeLists.txt  build.gradle
jackknife-annotations-ioc/: build.gradle
jackknife-aop/: build.gradle
jackknife-aop-plugin/: build.gradle
jackknife-av/: CMakeLists.txt  build.gradle
jackknife-av/cmake/: jackknife-av.cmake
jackknife-av/libs/include/libavcodec/: avcodec.h
jackknife-av/libs/include/libavformat/: avformat.h
jackknife-av/src/androidTest/java/com/lwh/jackknife/av/: ExampleInstrumentedTest.java
jackknife-av/src/main/: AndroidManifest.xml
jackknife-av/src/main/cpp/: cmdutils.c  cmdutils.h  config.h  ffmpeg.c  ffmpeg.h  ffmpeg_api.c  ffmpeg_api.h  ffmpeg_jni.cpp  ffmpeg_jni.h  ffmpeg_opt.c  jk_av_jni.cpp  jk_log.h  jknf_codec.cpp  jknf_log.h
jackknife-av/src/main/cpp/include/libavcodec/: mathops.h
jackknife-av/src/main/cpp/include/libavutil/: timer.h
jackknife-av/src/main/java/com/lwh/jackknife/av/bean/: Lyric.java  Sentence.java
jackknife-av/src/main/java/com/lwh/jackknife/av/codec/: Decoder.java  Encoder.java
jackknife-av/src/main/java/com/lwh/jackknife/av/ffmpeg/: BaseConfig.java  Callback.java  FFmpeg.java  FFmpegApi.java  FFmpegCmd.java  FFmpegExecutors.java  FFmpegJni.java
jackknife-av/src/main/java/com/lwh/jackknife/av/filter/: BlackWhiteFilter.java  ColorExchangeFilter.java  DarkCornerFilter.java  PhotographicPlateFilter.java  VideoFilter.java
jackknife-av/src/main/java/com/lwh/jackknife/av/live/: JKPusher.java
jackknife-av/src/main/java/com/lwh/jackknife/av/media/: SimpleAudioPlayer.java
jackknife-av/src/main/java/com/lwh/jackknife/av/player/: JKNativePlayer.java
jackknife-av/src/main/java/com/lwh/jackknife/av/util/: AudioUtils.java  CpuUtils.java  EffectUtils.java  LrcUtils.java  MusicTimer.java  MusicUtils.java  VideoUtils.java
jackknife-av/src/main/java/com/lwh/jackknife/av/wallpaper/: CameraLiveWallpaper.java  VideoLiveWallpaper.java
jackknife-av/src/main/java/com/lwh/jackknife/av/webrtc/: AppRTCAudioManager.java  AppRTCBluetoothManager.java  AppRTCClient.java  AppRTCProximitySensor.java  CaptureQualityController.java  OnCallEvents.java  OnVideoCallEvents.java  OnVoiceCallEvents.java  PeerConnectionClient.java  RoomParametersFetcher.java  SimpleSdpObserver.java  TCPChannelClient.java  WebRtcBase.java  WebRtcCall.java  WebRtcSession.java  WebSocketChannelClient.java  WebSocketRTCClient.java
jackknife-av/src/main/java/com/lwh/jackknife/av/webrtc/interfaces/: IWebRtcCall.java  IWebRtcSession.java
jackknife-av/src/main/java/com/lwh/jackknife/av/webrtc/mode/: IWebRtcMode.java  JKVideoMode.java  JKVoiceMode.java
jackknife-av/src/main/java/com/lwh/jackknife/av/webrtc/parameters/: CaptureParameters.java  RoomParameters.java
jackknife-av/src/main/java/com/lwh/jackknife/av/webrtc/util/: AppRTCUtils.java  AsyncHttpURLConnection.java  RtcTimer.java
jackknife-av/src/main/java/com/lwh/jackknife/av/webrtc/voip/: IVoIPCall.java  IVoIPMode.java  IVoIPSession.java  VoIPBase.java  VoIPCall.java  VoIPSession.java  VoIPVideoMode.java  VoIPVoiceMode.java
jackknife-av/src/main/java/com/lwh/jackknife/av/webrtc/voip/parameters/: CaptureParameters.java  RoomParameters.java
jackknife-av/src/main/java/com/lwh/jackknife/av/widget/: LyricView.java
jackknife-av/src/main/res/raw/: call.m4a
jackknife-av/src/main/res/values/: strings.xml
jackknife-av/src/test/java/com/lwh/jackknife/av/: ExampleUnitTest.java
jackknife-ffmpeg/: build.gradle
jackknife-filechooser/: build.gradle
jackknife-filepatch/: CMakeLists.txt  build.gradle
jackknife-filepatch/src/main/: AndroidManifest.xml
jackknife-filepatch/src/main/cpp/: bspatch.c
jackknife-filepatch/src/main/java/com/lwh/jackknife/patch/: Patch.java
jackknife-filepatch/src/main/res/values/: strings.xml
jackknife-ioc/: build.gradle
jackknife-ioc2/: build.gradle
jackknife-ioc2-compiler/: build.gradle
jackknife-multiproxy/: build.gradle
jackknife-mvp/: build.gradle
jackknife-mvvm/: build.gradle
jackknife-orm/: build.gradle
jackknife-util/: build.gradle
jackknife-viewinject/: build.gradle
jackknife-viewinject-annotations/: build.gradle
jackknife-widget/: build.gradle
jackknife-xhttp/: build.gradle
jackknife-xpermission/: build.gradle
jackknife-xskin/: build.gradle
lib/: build.gradle
(+978 files in other folders)
